# cpN

./: .gitignore  .gitmodules
cluster/: CPNCluster.ipynb
fk/: AGENTS.md  pyproject.toml
fk/notebooks/: CheckPhi.ipynb
fk/scripts/: convert_ensemble.py  convert_ensembles.sh  make_ensembles.sh  run_fk_cpn.py  run_fk_cpn_phi.py  run_had_cpn.py
fk/src/fk/: __init__.py  hmc.py  langevin.py  theory.py  util.py
flow/: .gitignore  CMakeLists.txt
flow/example_simple/: CMakeLists.txt  example-simple.cpp
flow/notebooks/: CPNFlows.ipynb  CPNInterpolants.ipynb
flow/src/: CMakeLists.txt  config.h  main.cpp
heatbath_cpp/: CMakeLists.txt
heatbath_cpp/data/: analyze.py  vis_sweepE.py  vis_tmp.py
heatbath_cpp/data/scaling/: run_scaling.sh  scaling.txt
heatbath_cpp/lib/: CMakeLists.txt  config.h.in  cpn.cpp  cpn.h  lattice.h  metropolis.cpp  metropolis.h  util.h
heatbath_cpp/scripts/: make_dataset_deforms.sh
heatbath_cpp/src/: CMakeLists.txt  run_heatbath.cpp
heatbath_py/lib/: cpn.py  cpn_heatbath.py
heatbath_py/src/: test_heatbath.py
lib/: cpn.py  cpn_heatbath.py
misc/sample_cond/: sample_cond.py
misc/toy_model/: toy_2pt.py  toy_model_2pt.nb  toy_model_2pt_scratch.nb
notebooks/: CPN_HAD.ipynb  CPN_StN.ipynb  PINN_Deforms.ipynb
src/: test_heatbath.py
